# KubeZen

./: .editorconfig  .gitignore  .pylintrc  KubeZen.spec  analyze_profile.py  analyze_yappi.py  mypy.ini  pyproject.toml  run_kubezen.py  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
assets/build_scripts/: build_static_tmux.sh  build_static_vim.sh
assets/download_scripts/: download_fzf_suite.sh
assets/runtime_config/: app.vimrc
assets/tmux/: kubezen.tmux.conf
scripts/: build_static_tmux.sh  build_static_vim.sh  download_fzf-vim.sh  download_fzf.sh  download_kubectl.sh  run_tests.sh
src/KubeZen/: __init__.py  __main__.py  app.css  app.py  cli.py  config.py  core_ui_runner.py  kubectl_client.py  logger.py  main.py
src/KubeZen/actions/: __init__.py  _explicit_imports.py  action_registry.py  base_action.py  common.py  cronjobs.py  delete_action.py  delete_resource.py  describe_action.py  describe_resource.py  edit_action.py  edit_resource.py  exec_into_pod_action.py  nodes.py  port_forward.py  port_forward_action.py  pvc_file_browser_action.py  replicaset_actions.py  scale_action.py  talos.py  view_logs.py  view_logs_action.py  view_yaml.py  view_yaml_action.py  workloads.py
src/KubeZen/containers/: resource_list.py  resource_tab_pane.py  sidebar.py
src/KubeZen/core/: actions.py  age_tracker.py  app_controller.py  app_services.py  contexts.py  error_handler.py  event_bus.py  events.py  exceptions.py  fzf_ui_manager.py  kubernetes_client.py  kubernetes_watch_manager.py  model_discovery.py  resource_events.py  resource_registry.py  service_base.py  signals.py  store_factory.py  tmux_manager.py  tmux_ui_manager.py  ui_event_handler.py  user_input_manager.py  watch_manager.py  watched_resource_store.py  watched_resource_store_adapter.py
src/KubeZen/models/: __init__.py  admissionregistration.py  apps.py  base.py  batch.py  core.py  crd_model_factory.py  customresourcedefinitions.py  horizontalpodautoscalers.py  leases.py  networking.py  poddisruptionbudgets.py  priorityclasses.py  (+3 more)
tests/: conftest.py  test_base_screen.py
(+67 files in other folders)
