[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KubeZen"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A TUI for Kubernetes"
requires-python = ">=3.10"
dependencies = [
    "click",
    "textual",
    "libtmux",
    "kubernetes",
    "kubernetes-asyncio",
    "yappi",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[project.scripts]
kubezen = "KubeZen.main:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "freezegun>=1.2.0"
]
