[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KubeZen"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A TUI for Kubernetes"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click==8.2.1",
    "textual==3.6.0",
    "libtmux==0.46.2",
    "kubernetes_asyncio==32.3.2",
    "yappi",
    "dpath==2.2.0",
    "humanize",
    "jsonpath-ng==1.7.0",
    "pyyaml",
    "orjson==3.10.18",
    "croniter==6.0.0",
]

[project.scripts]
kubezen = "KubeZen.main:main"
