[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KubeZen"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A TUI for Kubernetes"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click==8.2.1",
    "textual==5.1.1",
    "libtmux==0.46.2",
    "kubernetes_asyncio==32.3.2",
    "dpath==2.2.0",
    "jsonpath-ng==1.7.0",
    "orjson==3.11.1",
    "croniter==6.0.0",
    "ciso8601==2.3.2",
    "PyYAML==6.0.2",
    "textual-speedups",
    "textual[syntax]",
]

[project.scripts]
kubezen = "KubeZen.main:main"
